# object_symbols_parser

./: README.md  object_symbols_parser.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd.yml
src/object_symbols_parser/: __init__.py  cli.py  object_symbols_parser.py
tests/: test_object_symbols_parser.py
